--- a/package.json
+++ b/package.json
@@ -10,10 +10,29 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "19.1.1",
-    "react-native": "0.82.1",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-native/new-app-screen": "0.82.1",
-    "react-native-safe-area-context": "^5.5.2"
+    "@react-navigation/material-top-tabs": "^7.4.1",
+    "@react-navigation/native": "^7.1.19",
+    "@react-navigation/native-stack": "^7.6.1",
+    "i18next": "^25.6.0",
+    "react": "19.1.1",
+    "react-i18next": "^16.2.1",
+    "react-native": "0.82.1",
+    "react-native-gesture-handler": "^2.29.0",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-localize": "^3.6.0",
+    "react-native-mmkv": "^4.0.0",
+    "react-native-nitro-modules": "^0.31.3",
+    "react-native-pager-view": "^6.9.1",
+    "react-native-reanimated": "^4.1.3",
+    "react-native-safe-area-context": "^5.6.2",
+    "react-native-screens": "^4.18.0",
+    "react-native-sfsymbols": "^1.2.2",
+    "react-native-swipe-list-view": "^3.2.9",
+    "react-native-tab-view": "^4.2.0",
+    "react-native-webview": "^13.16.0",
+    "react-native-worklets": "^0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -25,15 +44,15 @@
     "@react-native/babel-preset": "0.82.1",
     "@react-native/eslint-config": "0.82.1",
     "@react-native/metro-config": "0.82.1",
-    "@react-native/typescript-config": "0.82.1",
-    "@types/jest": "^29.5.13",
-    "@types/react": "^19.1.1",
+    "@react-native/typescript-config": "^0.82.1",
+    "@types/jest": "^30.0.0",
+    "@types/react": "^19.2.2",
     "@types/react-test-renderer": "^19.1.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-test-renderer": "19.1.1",
-    "typescript": "^5.8.3"
+    "typescript": "^5.9.3"
   },
   "engines": {
     "node": ">=20"
